Complete rebranding from 'PDF Renamer & Splitter' to 'Aura PDF'
- Updated package.json: name, description, productName, appId, shortcuts
- Updated main.js: window title and about dialog
- Updated app.js: class name from PDFRenamerApp to AuraPDFApp
- Updated localStorage keys from 'pdf-renamer-patterns' to 'aura-pdf-patterns'
- Updated all JavaScript files with consistent naming
- Updated installation instructions and batch files
- Updated HTML references to use new class name
- Fixed pattern creation errors and removed non-existent function calls
- Added loading screen to eliminate black screen on startup
- Optimized app startup performance

--- a/index.html
+++ b/index.html
@@ -657,10 +657,10 @@
             // Wait a bit for all scripts to be ready
             setTimeout(() => {
                 console.log('Initializing main app...');
-                if (typeof PDFRenamerApp !== 'undefined') {
-                    window.app = new PDFRenamerApp();
+                if (typeof AuraPDFApp !== 'undefined') {
+                    window.app = new AuraPDFApp();
                 } else {
-                    console.error('PDFRenamerApp not found');
+                    console.error('AuraPDFApp not found');
                 }
             }, 100);
         });
